Add owncloud link to docs page

--- a/webapp/home/templates/home/pages/docs.html
+++ b/webapp/home/templates/home/pages/docs.html
@@ -17,16 +17,10 @@
 
   <br>
 
-  <div class="container my-5">
+  <section class="container my-5">
+    <h3>Identity</h3>
+    <hr>
     <ul class="lead">
-      <li>
-        <a href="/cloudstor.html">File transfer with CloudStor</a>
-      </li>
-
-      <!-- <li>
-        <a href="/owncloud.html">File transfer with OwnCloud</a>
-      </li> -->
-
       <li>
         <a href="/institutions">Australian research institutions</a>
       </li>
@@ -35,7 +29,21 @@
         <a href="/aaf">Australian access federation institutions</a>
       </li>
     </ul>
-  </div>
+  </section>
+
+  <section class="container my-5">
+    <h3>Remote storage</h3>
+    <hr>
+    <ul class="lead">
+      <li>
+        <a href="/cloudstor.html">File transfer with CloudStor</a>
+      </li>
+
+      <li>
+        <a href="/owncloud.html">File transfer with OwnCloud</a>
+      </li>
+    </ul>
+  </section>
 </main>
 
 {% endblock %}
