Comment out stale events from nav/index

--- a/webapp/home/templates/home/header.html
+++ b/webapp/home/templates/home/header.html
@@ -88,13 +88,13 @@
             {% endif %}>
             News
           </a>
-          <a {% if request.path|slice:":7" == '/events' %}
+          <!-- <a {% if request.path|slice:":7" == '/events' %}
             class="nav-link active" href="/events"
             {% else %}
             class="nav-link" href="/events"
             {% endif %}>
             Events
-          </a>
+          </a> -->
           <a {% if request.path|slice:":7" == '/people' %}
             class="nav-link active" href="/people"
             {% else %}
