--- a/webapp/home/templates/home/index.html
+++ b/webapp/home/templates/home/index.html
@@ -122,7 +122,8 @@
   </section>
 
   <section class="row no-gutter" id="news-events">
-    <div class="col-md-6 px-3" id="news">
+    <!-- <div class="col-md-6 px-3" id="news"> -->
+    <div class="col px-3" id="news">
       <div class="row justify-content-between">
         <div class="col">
           <h4>News</h4>
@@ -155,7 +156,7 @@
       {% endfor %}
     </div>
 
-    <div class="col-md-6 px-3">
+    <!-- <div class="col-md-6 px-3">
       <div class="row justify-content-between">
         <div class="col">
           <h4>Events and workshops</h4>
@@ -186,7 +187,7 @@
         </div>
       </article>
       {% endfor %}
-    </div>
+    </div> -->
   </section>
 
   {% if tool_updates %}
