--- a/webapp/home/templates/home/subdomains/components/floating-info-button.html
+++ b/webapp/home/templates/home/subdomains/components/floating-info-button.html
@@ -22,13 +22,8 @@
       </div>
       <div class="modal-body">
         <p>
-          <em>genome.usegalaxy.org.au</em>
-          is a community site for genome assembly and annotation. All the tools and functionality of Galaxy Australia are still available in this site, but the homepage content is dedicated to helping genomics researchers.
-        </p>
-        <p>
-          This site is connected to the same server as <em>usegalaxy.org.au</em>, but with an interface dedicated to helping our genomics researchers. Your history, jobs and data quota are shared with the main server.
+          This site <em>genome.usegalaxy.org.au</em> is connected to the same server as <em>usegalaxy.org.au</em>, but with an interface dedicated to helping our genomics researchers. Your history, jobs and data quota are shared with the main server.
           <p><a href="https://usegalaxy.org.au" target="_blank">Take me back to normal Galaxy Australia!</a></p>
-          <p><a href="#">What is a community site and how can I use it?</a></p>
           <p><a href="/about">What is Galaxy Australia?</a></p>
           <p><a href="/request/support">Galaxy Australia support</a></p>
         </p>
