--- a/webapp/home/templates/home/index.html
+++ b/webapp/home/templates/home/index.html
@@ -231,11 +231,11 @@
 
       <div class="col">
         <p class="text-center">
-          <a class="ga-btn" data-nostrip="true" href="https://usegalaxy.org.au/tiaas" target="_blank">
+          <a class="ga-btn" href="https://usegalaxy.org.au/tiaas" target="_blank">
             Learn more
           </a>
           <br>
-          <a class="ga-btn" data-nostrip="true" href="https://usegalaxy.org.au/tiaas/new" target="_blank">
+          <a class="ga-btn" href="https://usegalaxy.org.au/tiaas/new" target="_blank">
             Enquire now
           </a>
         </p>
