--- a/webapp/home/templates/home/subdomains/components/info-modal.html
+++ b/webapp/home/templates/home/subdomains/components/info-modal.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <div class="modal fade" id="infoModal" tabindex="-1">
   <div class="modal-dialog modal-lg">
     <div class="modal-content">
@@ -7,11 +9,17 @@
       </div>
       <div class="modal-body">
         <p>
-          This site <em>genome.usegalaxy.org.au</em> is connected to the same server as <em>usegalaxy.org.au</em>, but with an interface dedicated to helping our genomics researchers. Your history, jobs and data quota are shared with the main server.
-          <p><a href="https://usegalaxy.org.au" target="_blank">Take me back to normal Galaxy Australia!</a></p>
-          <p><a href="/about">What is Galaxy Australia?</a></p>
-          <p><a href="/request/support">Galaxy Australia support</a></p>
+          This site <em>genome.usegalaxy.org.au</em> is connected to the same server as <em>usegalaxy.org.au</em>, but with an interface dedicated to helping our genomics researchers. Your history, jobs and data quota are shared with the Base server.
         </p>
+
+        <div class="my-3">
+          Switch between sites quickly using the dropdown in Galaxy Australia's main navigation bar:
+          <img class="w-100 my-3 mx-auto" src="{% static 'home/img/subdomains/site-switcher.png' %}" alt="Switch site button">
+        </div>
+
+        <p><a class="ga-btn" href="https://usegalaxy.org.au" target="_blank">Take me back to Galaxy Australia</a></p>
+        <p><a class="ga-btn" href="/about">What is Galaxy Australia?</a></p>
+        <p><a class="ga-btn" href="/request/support">Galaxy Australia support</a></p>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
