Init proteomics lab

--- a/webapp/home/static/home/css/subdomains/main.css
+++ b/webapp/home/static/home/css/subdomains/main.css
@@ -10,7 +10,7 @@ code {
   width: 4rem;
   margin-right: 3rem;
 }
-.header-genome {
+.header-subdomain {
   font-size: 4rem;
   font-family: 'Exo 2', sans-serif;
 }
