--- a/webapp/home/templates/home/subdomains/components/feedback.html
+++ b/webapp/home/templates/home/subdomains/components/feedback.html
@@ -14,7 +14,7 @@
         <div class="modal-body">
           <div class="default-content">
             <p>
-              We'd love to hear your feedback on the Galaxy Australia Genome Lab. Please let us know what
+              We'd love to hear your feedback on the Galaxy Australia {{ subdomain|title }} Lab. Please let us know what
               you think!
             </p>
             <div class="mb-3">
