--- a/webapp/home/templates/home/subdomains/components/info-modal.html
+++ b/webapp/home/templates/home/subdomains/components/info-modal.html
@@ -4,12 +4,12 @@
   <div class="modal-dialog modal-lg">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title">Galaxy Australia Genome Lab</h5>
+        <h5 class="modal-title">Galaxy Australia {{ site_name }}</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
         <p>
-          This site <em>genome.usegalaxy.org.au</em> is connected to the same server as <em>usegalaxy.org.au</em>, but with an interface dedicated to helping our genomics researchers. Your history, jobs and data quota are shared with the Base server.
+          This site <em>{{ subdomain }}.usegalaxy.org.au</em> is connected to the same server as <em>usegalaxy.org.au</em>, but with an interface dedicated to helping our {{ researchers }} researchers. Your history, jobs and data quota are shared with the Base server.
         </p>
 
         <div class="my-3">
