--- a/webapp/home/templates/home/requests/mail/invalid-institutional-email.html
+++ b/webapp/home/templates/home/requests/mail/invalid-institutional-email.html
@@ -4,17 +4,17 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>AlphaFold Access Request</title>
+    <title>{{ form.RESOURCE_NAME }} Access Request</title>
   </head>
   <body>
-    <h3>Access to AlphaFold could not be granted</h3>
+    <h3>Access to {{ form.RESOURCE_NAME }} could not be granted</h3>
 
     <p>
       Dear {{ form.cleaned_data.name }},
     </p>
 
     <p>
-      A user has requested access to AlphaFold on Galaxy Australia with your
+      A user has requested access to {{ form.RESOURCE_NAME }} on Galaxy Australia with your
       email address ({{ form.cleaned_data.email }}).
       <b>Unfortunately we cannot process this request</b>,
       because we could not find a Galaxy Australia account registered to this
@@ -22,7 +22,7 @@
     </p>
 
     <p>
-      If you would still like to access AlphaFold on Galaxy Australia, please
+      If you would still like to access {{ form.RESOURCE_NAME }} on Galaxy Australia, please
       do one of the following:
     </p>
 
