Refactor alphafold request to generic access form

--- a/webapp/home/templates/home/index.html
+++ b/webapp/home/templates/home/index.html
@@ -44,7 +44,7 @@
         <p>
           Alphafold 2.0 on Galaxy Australia
         </p>
-        <a class="ga-btn" href="/request/alphafold">
+        <a class="ga-btn" href="/request/access/alphafold">
           Apply now
         </a>
       </div>
