--- a/webapp/home/templates/home/requests/access-request-success.html
+++ b/webapp/home/templates/home/requests/access-request-success.html
@@ -16,8 +16,8 @@
     <br>
 
     <p class="alert alert-success" style="max-width: 600px;">
-      If we find a Galaxy Australia account registed to {{ email }}, an
-      administrator will enable AlphaFold access for this account.
+      If we find a Galaxy Australia account registed to {{ form.email }}, an
+      administrator will enable {{ form.RESOURCE_NAME }} access for this account.
     </p>
 
     <div class="my-5">
