--- a/webapp/home/templates/home/requests/menu.html
+++ b/webapp/home/templates/home/requests/menu.html
@@ -77,7 +77,7 @@
         </div>
 
         <div class="card-footer">
-          <a class="ga-btn" href="/request/alphafold">
+          <a class="ga-btn" href="/request/access/alphafold">
             Apply now
           </a>
         </div>
