Refactored forms with OtherFieldFormMixin

--- a/webapp/home/templates/home/requests/access-request-success.html
+++ b/webapp/home/templates/home/requests/access-request-success.html
@@ -16,7 +16,7 @@
     <br>
 
     <p class="alert alert-success" style="max-width: 600px;">
-      If we find a Galaxy Australia account registed to {{ form.email }}, an
+      If we find a Galaxy Australia account registered to {{ form.email }}, an
       administrator will enable {{ form.RESOURCE_NAME }} access for this account.
     </p>
 
