Add fgenesh to support menu

--- a/webapp/home/templates/home/requests/menu.html
+++ b/webapp/home/templates/home/requests/menu.html
@@ -83,6 +83,23 @@
         </div>
       </div>
     </div>
+
+    <div class="card-group request-menu-cards">
+      <div class="card">
+        <h1><span class="material-icons">fingerprint</span></h1>
+        <div class="card-body">
+          <p>
+            Apply to use Fgenesh++ on Galaxy Australia
+          </p>
+        </div>
+
+        <div class="card-footer">
+          <a class="ga-btn" href="/request/access/fgenesh">
+            Apply now
+          </a>
+        </div>
+      </div>
+    </div>
   </div>
 </main>
 
