Add "access" section to support menu

--- a/webapp/home/templates/home/requests/menu.html
+++ b/webapp/home/templates/home/requests/menu.html
@@ -67,12 +67,16 @@
       </div>
     </div>
 
+    <hr>
+
+    <h3 class="text-center">Request access to resources on Galaxy Australia</h3>
+
     <div class="card-group request-menu-cards">
       <div class="card">
         <h1><span class="material-icons">fingerprint</span></h1>
         <div class="card-body">
           <p>
-            Apply to use AlphaFold 2.0 on Galaxy Australia
+            Apply to use AlphaFold 2 to predict protein structures
           </p>
         </div>
 
@@ -82,14 +86,12 @@
           </a>
         </div>
       </div>
-    </div>
 
-    <div class="card-group request-menu-cards">
       <div class="card">
         <h1><span class="material-icons">fingerprint</span></h1>
         <div class="card-body">
           <p>
-            Apply to use Fgenesh++ on Galaxy Australia
+            Apply to use Fgenesh++ for genome annotation
           </p>
         </div>
 
