Clarify wording in invalid email warning mail

--- a/webapp/home/templates/home/requests/mail/invalid-institutional-email.html
+++ b/webapp/home/templates/home/requests/mail/invalid-institutional-email.html
@@ -28,7 +28,7 @@
 
     <ul>
       <li>
-        Open a Galaxy Australia account with this email address
+        Open a Galaxy Australia account with this email address and re-submit your request
       </li>
       <li style="list-style-type: none;">
         - OR -
