--- a/webapp/home/templates/home/requests/access/success.html
+++ b/webapp/home/templates/home/requests/access/success.html
@@ -20,6 +20,13 @@
       administrator will enable {{ form.RESOURCE_NAME }} access for this account.
     </p>
 
+    {% if actioned %}
+    <p class="alert alert-warning" style="max-width: 600px;">
+      If you do not receive email confirmation within the next 15 minutes,
+      please check your spam folder.
+    </p>
+    {% endif %}
+
     <div class="my-5">
       <a class="ga-btn" href="/"> Home </a>
     </div>
