--- a/webapp/home/templates/home/requests/mail/invalid-institutional-email.html
+++ b/webapp/home/templates/home/requests/mail/invalid-institutional-email.html
@@ -1,19 +1,20 @@
 {% load static %}
 
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html>
   <head>
     <meta charset="utf-8">
     <title>{{ form.RESOURCE_NAME }} Access Request</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   </head>
   <body>
     <h3>Access to {{ form.RESOURCE_NAME }} could not be granted</h3>
 
-    <p>
+    <p style="font-size: 14pt;">
       Dear {{ form.cleaned_data.name }},
     </p>
 
-    <p>
+    <p style="font-size: 14pt;">
       A user has requested access to {{ form.RESOURCE_NAME }} on Galaxy Australia with your
       email address ({{ form.cleaned_data.email }}).
       <b>Unfortunately we cannot process this request</b>,
@@ -21,7 +22,7 @@
       email address.
     </p>
 
-    <p>
+    <p style="font-size: 14pt;">
       If you would still like to access {{ form.RESOURCE_NAME }} on Galaxy Australia, please
       do one of the following:
     </p>
@@ -39,23 +40,21 @@
       </li>
     </ul>
 
-    <p>
+    <p style="font-size: 14pt;">
       If this was not you, please disregard this email and no action will be
       taken.
     </p>
 
-    <p>
+    <p style="font-size: 14pt;">
       Regards,
       <br>
       The Galaxy Australia Team
     </p>
 
-    <p>
-      <img
-        src="{{ scheme }}://{{ hostname }}{% static 'home/img/ga-logo.png' %}"
-        alt="Galaxy Australia logo"
-        style="width: 175px;"
-      >
-    </p>
+    <img
+      src="{{ scheme }}://{{ hostname }}{% static 'home/img/ga-logo.png' %}"
+      alt="Galaxy Australia logo"
+      style="width: 180px; height: auto; margin: 15px 0;"
+    >
   </body>
 </html>
