Restyle image/block notices

--- a/webapp/home/templates/home/index.html
+++ b/webapp/home/templates/home/index.html
@@ -22,11 +22,11 @@
     </a>
   </section>
 
-  <section class="container-fluid my-5" id="tagline">
+  <section class="container-fluid my-3" id="tagline">
 
     {% include 'home/snippets/static-notices.html' %}
 
-    <p>
+    <p class="mt-4">
       Galaxy Australia is an
       <b> open, web-based </b>
       platform for accessible, reproducible
