--- a/webapp/home/templates/home/requests/access/fgenesh.html
+++ b/webapp/home/templates/home/requests/access/fgenesh.html
@@ -153,7 +153,7 @@
           one species of interest, you can select multiple matrices.
         </p>
 
-        {{ form.matrix.errors }}
+        {{ form.matrices.errors }}
 
         <p>
           <button class="ga-btn btn-sm" type="button" onclick="resetTreeList();">Collapse all</button>
