--- a/webapp/home/templates/home/requests/access/fgenesh.html
+++ b/webapp/home/templates/home/requests/access/fgenesh.html
@@ -153,7 +153,7 @@
           one species of interest, you can select multiple matrices.
         </p>
 
-        <div id="matricesValue" style="display: none;">{{ form.matrices.value }}</div>
+        <div id="matricesValue" style="display: none;">{{ form.matrices.value|default_if_none:"[]" }}</div>
 
         {{ form.matrices.errors }}
 
