Style errors in mail template

--- a/webapp/home/templates/home/requests/mail/access-request.html
+++ b/webapp/home/templates/home/requests/mail/access-request.html
@@ -13,7 +13,7 @@
   </em>
   <p>
     Exception: <br>
-    <code>
+    <code style="background-color: #f0d5cc; color: #c43f1a; font-size: 12pt; padding: 8px;">
       {{ exception }}
     </code>
   </p>
