Add show selection function

--- a/webapp/home/templates/home/requests/access/fgenesh.html
+++ b/webapp/home/templates/home/requests/access/fgenesh.html
@@ -158,8 +158,9 @@
         {{ form.matrices.errors }}
 
         <p>
-          <button class="ga-btn btn-sm" type="button" onclick="resetTreeList();">Collapse all</button>
+          <button class="ga-btn btn-sm" type="button" onclick="expandTreeSelected();">Show selection</button>
           <button class="ga-btn btn-sm" type="button" onclick="clearTreeSelection();">Clear selection</button>
+          <button class="ga-btn btn-sm" type="button" onclick="resetTreeList();">Collapse tree</button>
         </p>
 
         <div id="treeSearch" class="mb-2">
